fix: fix variable item overlaping the table header.

--- a/src/features/variables/ui/variablesListHeader/VariablesListHeader.module.css
+++ b/src/features/variables/ui/variablesListHeader/VariablesListHeader.module.css
@@ -6,6 +6,7 @@
   color: var(--color-white);
   text-align: center;
   background-color: var(--color-gray-800);
+  z-index: 1;
 }
 
 .head-item {
